tests/ui/issues/issue-43250.stderr
error: arbitrary expressions aren't allowed in patterns
  --> $DIR/issue-43250.rs:9:8
   |
LL |     m!(y);
   |        ^
   |
   = note: the `expr` fragment specifier forces the metavariable's content to be an expression

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/issue-43250.rs:11:8
   |
LL |     m!(C);
   |        ^
   |
   = note: the `expr` fragment specifier forces the metavariable's content to be an expression

error: aborting due to 2 previous errors

